Fix a textarea whitespace issue

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -1020,6 +1020,7 @@ label {
   height: @form-input-height;
   .form-field();
   width: 100%;
+  vertical-align: bottom; /* Prevents default bottom "margin" when textarea is only child of a box */
 }
 
 .form-input-large {
